updated mobile version

--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@
             </div>
         </div>
         <main class="container-fluid container-lg col-lg-11 bg-light">
-            <div class="row align-items-baseline">
-                <section class="col-12 col-md-7 order-md-2 p-0">
+            <div class="row bg-white">
+                <!-- top story -->
+                <section class="col-12 ">
                     <article class="p-3 border-bottom bg-white">
                         <h3 class="text-secondary section-title">Top Story</h3>
                         <div class="w-100 position position-relative">
@@ -207,7 +208,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 col-md-5 order-md-1 p-0">
+                <!-- featured story -->
+                <section class="col-12 ">
                     <article class="p-3 bg-white">
                         <h3 class="text-secondary section-title">featured stories</h3>
                         <div class="w-100 position position-relative">
@@ -266,7 +268,8 @@
                         </p>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- opinion -->
+                <section class="col-12 ">
                     <h3 class="text-secondary section-title">opinion</h3>
                     <article class="d-flex border-bottom pb-2 pt-2">
                         <img class="rounded-circle opinion-img" src="https://d.newsweek.com/en/full/1568478/bonnie-kristian.webp?w=63&h=63&f=ca92d03f69e06f6dd117bf04cef90475" alt="image">
@@ -313,7 +316,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- debate -->
+                <section class="col-12 ">
                     <h3 class="text-secondary section-title">the debate</h3>
                     <article class="debate-section pb-2 position-relative">
                         <div class="d-flex border-bottom mb-1 pb-3 align-items-center">
@@ -348,7 +352,8 @@
                         </a>
                     </article>
                 </section>
-                <section clas="col-12 bg-white">
+                <!-- sponsored 1 -->
+                <section clas="col-12 ">
                     <article class="p-3 bg-white">
                         <div class="w-100 position position-relative border border-bottom-none">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1575945/cybersecurity-vantage-hp-sponsor.jpg?w=500&h=333&f=ac517642217c0d9cec695be60008ce2a" alt="image">
@@ -411,7 +416,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- more stories -->
+                <section class="col-12" >
                     <h3 class="text-secondary section-title pt-1 pb-2 border-bottom">
                         more stories
                     </h3>
@@ -559,7 +565,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- culture & travel  -->
+                <section class="col-12 ">
                     <h3 class="text-secondary section-title pt-1 pb-2 border-bottom">
                         culture & travel
                     </h3>
@@ -606,7 +613,8 @@
                         </p>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- latest news -->
+                <section class="col-12 ">
                     <h3 class="text-secondary section-title pt-1 pb-2 border-bottom">
                         latest news
                     </h3>
@@ -661,7 +669,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- sponsored 2  -->
+                <section class="col-12 ">
                     <article class="pt-2 pb-2 bg-white">
                         <div class="w-100 position position-relative border border-bottom-none">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1559216/tokyo-my-city-chizu-nakamoto.jpg?w=500&h=333&f=9c0c7599e1d2310c5649861e93649619" alt="image">
@@ -754,7 +763,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- in the magazine -->
+                <section class="col-12 ">
                     <div class="d-flex align-items-center justify-content-center mr-auto ml-auto w-50">
                         <img class="icon-img mr-2" src="img/n-icon.png" alt="image">
                         <p class="font-weight-bold magazine-header">IN THE MAGAZINE</p>
@@ -878,7 +888,8 @@
                         </a>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- editors pick -->
+                <section class="col-12 ">
                     <div class="d-flex align-items-center justify-content-center mr-auto ml-auto w-50">
                         <img class="icon-img mr-2" src="img/n-icon.png" alt="image">
                         <p class="font-weight-bold magazine-header">
@@ -998,7 +1009,8 @@
                         </p>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- featured slideshows -->
+                <section class="col-12 ">
                     <div class="d-flex align-items-center justify-content-center mr-auto ml-auto w-50">
                         <img class="icon-img mr-2" src="img/n-icon.png" alt="image">
                         <p class="font-weight-bold magazine-header">
@@ -1039,56 +1051,8 @@
                         </a>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
-                    <a href="#" class="section-header-orange font-weight-bold">U.S</a>
-                    <article class=" bg-white border-top pt-4 pb-4">
-                        <div class="w-100 position position-relative">
-                            <img class="w-100" src="https://d.newsweek.com/en/full/1578814/dr-anthony-fauci.webp?w=767&h=512&f=a3e3383ca6108259ebfd53bd8471a61a" alt="image">
-                        </div>
-                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
-                            Fauci wants a national coronavirus stay-at-home order, but Trump doesn't
-                        </a>
-                    </article>
-                    <article class=" bg-white border-top pt-4 pb-4">
-                        <div class="w-100 position position-relative">
-                            <img class="w-100" src="https://d.newsweek.com/en/full/1578808/chuck-schumer.webp?w=767&h=512&f=8862c178a03655bfc8d9ca8814599baf" alt="image">
-                        </div>
-                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
-                            Chuck Schumer Says He's 'Appalled' By Trump's Letter: 'Stop the Pettiness'
-                        </a>
-                    </article>
-                    <article class="pt-2 pb-2 border-bottom d-flex bg-white">
-                        <div class="more-stories-img">
-                            <img src="https://d.newsweek.com/en/full/1578805/tucker-carlson.webp?w=95&h=95&f=93672ffb2f17bc6dfb7405fc2bde8e6f" alt="flag">
-                        </div>
-                        <div>
-                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
-                                Tucker Carlson: U.S. Shouldn't Let Medical Experts Make COVID-19 Decisions
-                            </a>
-                        </div>
-                    </article>
-                    <article class="pt-2 pb-2 border-bottom d-flex bg-white">
-                        <div class="more-stories-img">
-                            <img src="https://d.newsweek.com/en/full/1578799/jared-kushner.webp?w=95&h=95&f=a0223559aa52ded69b52f247b1412ce8" alt="flag">
-                        </div>
-                        <div>
-                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
-                                Jared Kushner Trends After Speaking at Coronavirus Task Force Briefing
-                            </a>
-                        </div>
-                    </article>
-                    <article class="pt-2 pb-4 mb-4 border-bottom d-flex bg-white">
-                        <div class="more-stories-img">
-                            <img src="https://d.newsweek.com/en/full/1575801/senate-democrats-block-coronavirus-stimulus-bill.webp?w=95&h=95&f=62be94c1b8c3ead702e061506261381f" alt="flag">
-                        </div>
-                        <div>
-                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
-                                Trump Falsely Claims Schumer Has Been MIA in Coronavirus Fight
-                            </a>
-                        </div>
-                    </article>
-                </section>
-                <section class="col-12 bg-white">
+                <!-- us -->
+                <section class="col-12 ">
                     <a href="#" class="section-header-orange font-weight-bold">
                         U.S
                     </a>
@@ -1139,7 +1103,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- world -->
+                <section class="col-12 ">
                     <a href="#" class="section-header-orange font-weight-bold">
                         World
                     </a>
@@ -1190,7 +1155,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- business -->
+                <section class="col-12 ">
                     <a href="#" class="section-header-orange font-weight-bold">
                         Business
                     </a>
@@ -1242,7 +1208,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- tech&sience -->
+                <section class="col-12 ">
                     <a href="#" class="section-header-orange font-weight-bold">
                         Tech & Science
                     </a>
@@ -1293,7 +1260,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- culture -->
+                <section class="col-12 ">
                     <a href="#" class="section-header-orange font-weight-bold">
                         Culture
                     </a>
@@ -1344,7 +1312,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- sports -->
+                <section class="col-12 ">
                     <a href="#" class="section-header-orange font-weight-bold">
                         Sports
                     </a>
@@ -1395,7 +1364,8 @@
                         </div>
                     </article>
                 </section>
-                <section class="col-12 bg-white ">
+                <!-- subscribe -->
+                <section class="col-12 ">
                     <h4 class="section-header-orange font-weight-bold">SUBSCRIBE</h4>
                     <article class="pt-2 pb-2 mb-2 d-flex flex-column justify-content-center align-items-center bg-light">
                         <div class="position-relative img-container mt-3">
@@ -1407,7 +1377,8 @@
                         <p class="mt-n3">Choose A Membership That's Perfect for You!</p>
                     </article>
                 </section>
-                <section class="col-12 bg-white">
+                <!-- newsletter -->
+                <section class="col-12 ">
                     <h4 class="section-header-orange font-weight-bold">NEWSLETTER</h4>
                     <article class="mb-2 d-flex flex-column justify-content-center align-items-center bg-light">
                         <img class="w-100 newsletter-img" src="https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5" alt="img">
