updated tablet subscribe section

--- a/index.html
+++ b/index.html
@@ -2181,8 +2181,10 @@
                     </div>
                 </section>
                 <!-- subscribe -->
-                <section class="col-12 ">
-                    <h4 class="section-header-orange font-weight-bold">SUBSCRIBE</h4>
+                <section class="col-12 d-md-none">
+                    <h4 class="section-header-orange font-weight-bold">
+                        SUBSCRIBE
+                    </h4>
                     <article class="pt-2 pb-2 mb-2 d-flex flex-column justify-content-center align-items-center bg-light">
                         <div class="position-relative img-container mt-3">
                             <img class="position-absolute" id="subscribe-back" src="https://d.newsweek.com/en/full/1576902/april-03-2020-cover.jpg?w=170&q=95&f=e7b6af0ef76e162727acd0141bfc2e8a" alt="img">
@@ -2191,6 +2193,24 @@
                         <h4 class="font-weight-bold text-center">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h4>
                         <p>All Access + Weekly Delivery.</p>
                         <p class="mt-n3">Choose A Membership That's Perfect for You!</p>
+                        <a class="subscribe-badge" href="#"><p class="font-weight-bold text-white text-center p-2 subscribe-badge">SUBSCRIBE ></p></a>
+                    </article>
+                </section>
+                <section class="col-12 d-none d-md-block">
+                    <h4 class="section-header-orange font-weight-bold">
+                        SUBSCRIBE
+                    </h4>
+                    <article class="pt-2 pb-2 mb-2 d-flex justify-content-center align-items-center bg-light">
+                        <div class="position-relative img-container mt-3 col-4">
+                            <img class="position-absolute" id="subscribe-back" src="https://d.newsweek.com/en/full/1576902/april-03-2020-cover.jpg?w=170&q=95&f=e7b6af0ef76e162727acd0141bfc2e8a" alt="img">
+                            <img class="position-absolute" id="subscribe-front" src="https://d.newsweek.com/en/full/1577760/cover-april-10-2020.jpg?w=170&q=95&f=a4b41b48dc29ccde5be9091db89cdf35" alt="img">
+                        </div>
+                        <div class="d-flex flex-column justify-content-between col-8 ml-4">
+                            <h4 class="font-weight-bold">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h4>
+                            <p>All Access + Weekly Delivery.</p>
+                            <p class="mt-n3">Choose A Membership That's Perfect for You!</p>
+                            <a class="subscribe-badge" href="#"><p class="font-weight-bold text-white text-center p-2 subscribe-badge">SUBSCRIBE ></p></a>
+                        </div>
                     </article>
                 </section>
                 <!-- newsletter -->
