fixed header bottom navbar padding errors

--- a/index.html
+++ b/index.html
@@ -37,37 +37,37 @@
             <div class="row d-none d-lg-flex position-relative border-bottom bg-white" id="header-bottom-navbar">
                 <div class="" id="top-navbar-lg">
                     <ul class="navbar-nav navbar-expand d-flex justify-content-between top-navbar-ul">
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">U.S.</a>
                         </li>
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">World</a>
                         </li>
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill">
                             <a href="#" class="nav-link font-weight-bold">Business</a>
                         </li>
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">Tech & Science</a>
                         </li>
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">Culture</a>
                         </li>
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">Newsgeek</a>
                         </li>
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">Sports</a>
                         </li>
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">Health</a>
                         </li>
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">The Debate</a>
                         </li>
-                        <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item border-right d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">Vantage</a>
                         </li>
-                        <li class="navbar-item d-flex justify-content-center flex-fill pr-1 pl-1">
+                        <li class="navbar-item d-flex justify-content-center flex-fill ">
                             <a href="#" class="nav-link font-weight-bold">Weather</a>
                         </li>
                         <li class="navbar-item border-none d-flex justify-content-center align-items-center flex-fill pl-1 position-relative">
