--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         </article>
                     </section>
                     <section class="col-12">
-                        <article class="p-3 bg-white">
+                        <article class=" bg-white">
                             <div class="w-100 position position-relative border border-bottom-none">
                                 <img class="w-100" src="https://d.newsweek.com/en/full/1575945/cybersecurity-vantage-hp-sponsor.jpg?w=500&h=333&f=ac517642217c0d9cec695be60008ce2a" alt="image">
                                 <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
@@ -363,7 +363,7 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="p-3 bg-white">
+                        <article class=" bg-white">
                             <div class="w-100 position position-relative border border-bottom-none">
                                 <img class="w-100" src="https://d.newsweek.com/en/full/1567276/synergy-executive.png?w=500&h=333&f=e6fd82b7f70041bcbbe5be256d74024f" alt="image">
                                 <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
@@ -379,7 +379,7 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="p-3 bg-white">
+                        <article class=" bg-white">
                             <div class="w-100 position position-relative">
                                 <img class="w-100" src="https://d.newsweek.com/en/full/1570615/nw-james-bond-banner-sponsored.jpg?w=500&h=333&f=547001b6968bad8dcee8cf938a4c68ed" alt="image">
                                 <span class="position-absolute font-weight-bold bg-white p-2 story-span text-primary">
@@ -395,7 +395,7 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="p-3 bg-white">
+                        <article class=" bg-white">
                             <div class="w-100 position position-relative border border-bottom-none">
                                 <img class="w-100" src="https://d.newsweek.com/en/full/1568509/newsweek-amplify.png?w=500&h=333&f=98c0ebfc554597997a0de3bd6159812a" alt="image">
                             </div>
