--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                 </div>
                 <div class="d-none d-lg-block col-lg-4 overflow-y-scroll">
                     <section class="col-12 ">
-                        <h3 class="text-secondary section-title">opinion</h3>
+                        <h3 class="text-secondary section-title pt-3">opinion</h3>
                         <article class="d-flex border-bottom pb-2 pt-2">
                             <img class="rounded-circle opinion-img" src="https://d.newsweek.com/en/full/1568478/bonnie-kristian.webp?w=63&h=63&f=ca92d03f69e06f6dd117bf04cef90475" alt="image">
                             <div class="">
